feat: expose fds objects
